@@ -22,7 +22,8 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
-import org.apache.commons.collections.ListUtils;
+import org.apache.commons.collections4.ListUtils;
+import org.apache.commons.lang3.StringUtils;
 
 @Data
 @EqualsAndHashCode(callSuper = true)
@@ -43,7 +44,7 @@ public class TigerConfigurationKey extends ArrayList<TigerConfigurationKeyString
   }
 
   public TigerConfigurationKey(TigerConfigurationKey baseKey, String key) {
-    super(ListUtils.sum(baseKey, List.of(new TigerConfigurationKeyString(key))));
+    super(ListUtils.union(baseKey, List.of(new TigerConfigurationKeyString(key))));
   }
 
   public TigerConfigurationKey(List<TigerConfigurationKeyString> list) {
@@ -56,7 +57,7 @@ public class TigerConfigurationKey extends ArrayList<TigerConfigurationKeyString
 
   private static List<TigerConfigurationKeyString> splitKeys(
       String[] baseKeys, String[] additionalKeys) {
-    final List<TigerConfigurationKeyString> keys = splitKeys(baseKeys);
+    final List<TigerConfigurationKeyString> keys = new ArrayList<>(splitKeys(baseKeys));
     keys.addAll(splitKeys(additionalKeys));
     return keys;
   }
@@ -66,18 +67,17 @@ public class TigerConfigurationKey extends ArrayList<TigerConfigurationKeyString
       return Stream.of(key.split("_"))
           .map(String::toLowerCase)
           .map(TigerConfigurationKeyString::wrapAsKey)
-          .collect(Collectors.toList());
+          .toList();
     }
-    return Stream.of(key.split("\\."))
-        .map(TigerConfigurationKeyString::wrapAsKey)
-        .collect(Collectors.toList());
+    return Stream.of(key.split("\\.")).map(TigerConfigurationKeyString::wrapAsKey).toList();
   }
 
   private static List<TigerConfigurationKeyString> splitKeys(String... keys) {
     return Stream.of(keys)
         .map(TigerConfigurationKey::splitKey)
         .flatMap(List::stream)
-        .collect(Collectors.toList());
+        .filter(TigerConfigurationKeyString::isNotEmptyKey)
+        .toList();
   }
 
   public String downsampleKey() {
@@ -90,6 +90,19 @@ public class TigerConfigurationKey extends ArrayList<TigerConfigurationKeyString
 
   public boolean isBelow(TigerConfigurationKey reference) {
     if (reference == null || reference.size() >= size()) {
+      return false;
+    }
+    for (int i = 0; i < reference.size(); i++) {
+      final TigerConfigurationKeyString key = reference.get(i);
+      if (StringUtils.isNotEmpty(key.asString()) && !key.equals(get(i))) {
+        return false;
+      }
+    }
+    return true;
+  }
+
+  public boolean isDirectlyBelow(TigerConfigurationKey reference) {
+    if (reference == null || reference.size() + 1 != size()) {
       return false;
     }
     for (int i = 0; i < reference.size(); i++) {
@@ -110,11 +123,25 @@ public class TigerConfigurationKey extends ArrayList<TigerConfigurationKeyString
     return new TigerConfigurationKey(subList(reference.size(), size()));
   }
 
+  public TigerConfigurationKey createWithNewSubkey(String subkey) {
+    final TigerConfigurationKey result = new TigerConfigurationKey(this);
+    result.add(subkey);
+    return result;
+  }
+
   public boolean containsKey(String key) {
     return downsampleKey().matches(key);
   }
 
   public void add(String key) {
     addAll(splitKeys(key));
+  }
+
+  public TigerConfigurationKey getParentNodeOrIdentity() {
+    if (size() > 1) {
+      return new TigerConfigurationKey(subList(0, size() - 1));
+    } else {
+      return this;
+    }
   }
 }
