@@ -16,12 +16,12 @@
 
 package de.gematik.rbellogger.data;
 
-import de.gematik.rbellogger.RbelContent;
 import de.gematik.rbellogger.converter.RbelConverter;
 import de.gematik.rbellogger.data.facet.*;
 import de.gematik.rbellogger.data.util.RbelElementTreePrinter;
 import de.gematik.rbellogger.util.RbelException;
 import de.gematik.rbellogger.util.RbelJexlExecutor;
+import de.gematik.rbellogger.util.RbelPathAble;
 import de.gematik.rbellogger.util.RbelPathExecutor;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -30,24 +30,22 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.annotation.Nullable;
-import lombok.Builder;
-import lombok.Getter;
-import lombok.NonNull;
-import lombok.Setter;
+import lombok.*;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 
+@SuppressWarnings("unchecked")
 @Getter
 @Slf4j
-public class RbelElement implements RbelContent {
+public class RbelElement extends RbelPathAble {
 
-  {
+  static {
     RbelJexlExecutor.initialize();
   }
 
   private final String uuid;
   private final byte[] rawContent;
-  private final transient RbelElement parentNode;
+  private final RbelElement parentNode;
   private final List<RbelFacet> facets = new ArrayList<>();
   @Setter private Optional<Charset> charset;
 
@@ -71,12 +69,7 @@ public class RbelElement implements RbelContent {
     }
     this.rawContent = rawContent;
     this.parentNode = parentNode;
-
-    if (charset == null) {
-      this.charset = Optional.empty();
-    } else {
-      this.charset = charset;
-    }
+    this.charset = Objects.requireNonNullElseGet(charset, Optional::empty);
     if (rawContent != null) {
       this.size = rawContent.length;
     } else {
@@ -100,8 +93,7 @@ public class RbelElement implements RbelContent {
         .findFirst();
   }
 
-  @Override
-  public <T extends RbelFacet> boolean hasFacet(Class<T> clazz) {
+  public boolean hasFacet(Class<? extends RbelFacet> clazz) {
     return getFacet(clazz).isPresent();
   }
 
@@ -120,7 +112,7 @@ public class RbelElement implements RbelContent {
         .flatMap(Collection::stream)
         .map(Map.Entry::getValue)
         .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -144,7 +136,7 @@ public class RbelElement implements RbelContent {
     return getChildNodes().stream()
         .map(RbelElement::traverseAndReturnNestedMembersInternal)
         .flatMap(List::stream)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   // Yes, default-visibility (is called recursively)
@@ -152,25 +144,21 @@ public class RbelElement implements RbelContent {
     log.trace(
         "Traversing into {}: facets are {}",
         findNodePath(),
-        getFacets().stream()
-            .map(Object::getClass)
-            .map(Class::getSimpleName)
-            .collect(Collectors.toList()));
+        getFacets().stream().map(Object::getClass).map(Class::getSimpleName).toList());
     if (hasFacet(RbelRootFacet.class)) {
       return List.of(this);
     } else {
       return getChildNodes().stream()
           .map(RbelElement::traverseAndReturnNestedMembersInternal)
           .flatMap(List::stream)
-          .collect(Collectors.toList());
+          .toList();
     }
   }
 
-  @Override
   public String findNodePath() {
     LinkedList<Optional<String>> keyList = new LinkedList<>();
     final AtomicReference<RbelElement> ptr = new AtomicReference<>(this);
-    while (!(ptr.get().getParentNode() == null)) {
+    while (ptr.get().getParentNode() != null) {
       keyList.addFirst(
           ptr.get().getParentNode().getChildNodesWithKey().stream()
               .filter(entry -> entry.getValue() == ptr.get())
@@ -197,12 +185,11 @@ public class RbelElement implements RbelContent {
     return getChildNodesWithKey().stream()
         .filter(entry -> entry.getKey().equals(key))
         .map(Map.Entry::getValue)
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  @Override
   public Optional<String> findKeyInParentElement() {
-    return Optional.of(this).map(RbelElement::getParentNode).filter(Objects::nonNull).stream()
+    return Optional.of(this).map(RbelElement::getParentNode).stream()
         .flatMap(parent -> parent.getChildNodesWithKey().stream())
         .filter(e -> e.getValue() == this)
         .map(Map.Entry::getKey)
@@ -211,8 +198,7 @@ public class RbelElement implements RbelContent {
 
   @Override
   public List<RbelElement> findRbelPathMembers(String rbelPath) {
-    return new RbelPathExecutor(this, rbelPath)
-        .execute(RbelElement.class).stream().map(RbelElement.class::cast).toList();
+    return new RbelPathExecutor<>(this, rbelPath).execute();
   }
 
   @Override
@@ -225,14 +211,9 @@ public class RbelElement implements RbelContent {
     }
   }
 
-  @Override
   public Charset getElementCharset() {
     return charset
-        .or(
-            () ->
-                Optional.ofNullable(parentNode)
-                    .filter(Objects::nonNull)
-                    .map(RbelElement::getElementCharset))
+        .or(() -> Optional.ofNullable(parentNode).map(RbelElement::getElementCharset))
         .orElse(StandardCharsets.UTF_8);
   }
 
@@ -258,20 +239,16 @@ public class RbelElement implements RbelContent {
   }
 
   public Optional<Object> seekValue() {
-    return getFacet(RbelValueFacet.class).map(RbelValueFacet::getValue).filter(Objects::nonNull);
+    return getFacet(RbelValueFacet.class).map(RbelValueFacet::getValue);
   }
 
   public Optional<String> printValue() {
-    return getFacet(RbelValueFacet.class)
-        .map(RbelValueFacet::getValue)
-        .filter(Objects::nonNull)
-        .map(Object::toString);
+    return getFacet(RbelValueFacet.class).map(RbelValueFacet::getValue).map(Object::toString);
   }
 
   public <T> Optional<T> seekValue(Class<T> clazz) {
     return getFacet(RbelValueFacet.class)
         .map(RbelValueFacet::getValue)
-        .filter(Objects::nonNull)
         .filter(clazz::isInstance)
         .map(clazz::cast);
   }
@@ -296,7 +273,6 @@ public class RbelElement implements RbelContent {
     }
   }
 
-  @Override
   public Optional<RbelElement> findElement(String rbelPath) {
     final List<RbelElement> resultList = findRbelPathMembers(rbelPath);
     if (resultList.isEmpty()) {
@@ -334,18 +310,17 @@ public class RbelElement implements RbelContent {
     return Collections.unmodifiableList(facets).stream()
         .flatMap(
             facet -> {
-              if (facet instanceof RbelNestedFacet) {
-                return ((RbelNestedFacet) facet).getNestedElement().getFacets().stream();
+              if (facet instanceof RbelNestedFacet asRbelNestedFacet) {
+                return asRbelNestedFacet.getNestedElement().getFacets().stream();
               } else {
                 return Stream.of(facet);
               }
             })
         .filter(RbelNoteFacet.class::isInstance)
         .map(RbelNoteFacet.class::cast)
-        .collect(Collectors.toUnmodifiableList());
+        .toList();
   }
 
-  @Override
   public RbelElement findMessage() {
     RbelElement position = this;
     while (position.getParentNode() != null) {
@@ -365,7 +340,6 @@ public class RbelElement implements RbelContent {
     return Optional.empty();
   }
 
-  @Override
   public RbelElement findRootElement() {
     RbelElement result = this;
     RbelElement newResult = result.getParentNode();
@@ -374,6 +348,40 @@ public class RbelElement implements RbelContent {
       newResult = result.getParentNode();
     }
     return result;
+  }
+
+  @Override
+  public List<RbelPathAble> descendToContentNodeIfAdvised() {
+    if (hasFacet(RbelJsonFacet.class) && hasFacet(RbelNestedFacet.class)) {
+      return List.of(
+          getFacet(RbelNestedFacet.class).map(RbelNestedFacet::getNestedElement).orElseThrow(),
+          this);
+    } else {
+      return List.of(this);
+    }
+  }
+
+  @Override
+  public boolean shouldElementBeKeptInFinalResult() {
+    return !(hasFacet(RbelJsonFacet.class) && hasFacet(RbelNestedFacet.class));
+  }
+
+  public String printHttpDescription() {
+    return getFacet(RbelHttpRequestFacet.class)
+            .map(
+                req ->
+                    "HTTP " + req.getMethod().getRawStringContent() + " " + req.getPathAsString())
+            .orElse("")
+        + getFacet(RbelHttpResponseFacet.class)
+            .map(req -> "HTTP " + req.getResponseCode().getRawStringContent())
+            .orElse("")
+        + getFacet(RbelHttpMessageFacet.class)
+            .map(
+                msg ->
+                    " with body '"
+                        + StringUtils.abbreviate(msg.getBody().getRawStringContent(), 30)
+                        + "'")
+            .orElse("");
   }
 
   private static class RbelPathNotUniqueException extends RuntimeException {
